ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - d.example.com
    secretName: tls-secret
  rules:
  - host: b.ysquaretechnology.com
    http:
      paths:
        - path:
          backend:
            serviceName: nginx
            servicePort: 80
